# Ultra

./: .gitignore  CMakeLists.txt  README.md  build.sh
DeepAndWide/: CMakeLists.txt  synthetic_main.cpp
Demo_DeepAndWide/: CMakeLists.txt  DeepAndWide.pt  synthetic_main.cpp
Demo_LLD6/: CMakeLists.txt  LLD6.pt  synthetic_main.cpp
Demo_LSTM/: CMakeLists.txt  synthetic_main.cpp
Demo_Resnet18/: CMakeLists.txt  synthetic_main.cpp
Demo_Resnet50/: CMakeLists.txt  synthetic_main.cpp
LLD6/: CMakeLists.txt  synthetic_main.cpp
LSTM/: CMakeLists.txt  LSTM.pt  forward.cpp  forward.h  synthetic_main.cpp
Resnet18/: CMakeLists.txt  synthetic_main.cpp
Resnet50/: CMakeLists.txt  synthetic_main.cpp
scripts/: get_libtorch.sh  test.sh
src/: CMakeLists.txt  synthetic_forward.cc
src/ultra/: CMakeLists.txt  helper.cc  mutator_passes.cc  native_functions.h  native_library.cc  native_library.h  passes.cc  schema.cc  ultra.cc  ultra.h  ultra_replace_passes.cc
test/: CMakeLists.txt  LLD6.pt  execute_graph.cc  module_tests.cc  resnet50.py  scripts.h  scripts_out.h  torch_helper.py  torch_helper2.py  torch_helper3.py  unit_tests.cc
test/ir_for/: ir_for.cc
test/ir_for_for/: ir_for_for.cc
test/ir_for_for_if/: ir_for_for_if.cc
test/ir_if/: CMakeLists.txt  ir_if.cc
test/ir_if_1/: CMakeLists.txt  ir_if_1.cc
test/ir_if_2/: ir_if_2.cc
test/ir_if_3/: ir_if_3.cc
test/ir_if_4/: ir_if_4.cc
test/ir_list_pack_unpack/: ir_list_pack_unpack.cc
test/ir_tuple_pack_unpack/: ir_tuple_pack_unpack.cc
testM/: CMakeLists.txt  forward.cpp  forward.h  synthetic_main.cpp
